# pathfinding

./: .gitignore  Cargo.toml  README.md  index.html  index.js  package-lock.json  package.json
.github/workflows/: deploy.yml
pkg/: README.md  package.json  pathfinding.d.ts  pathfinding.js  pathfinding_bg.wasm  pathfinding_bg.wasm.d.ts
src/: grid.rs  lib.rs  search.rs
